@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,37 +18,48 @@
  */
 package org.apache.bookkeeper.mledger.impl;
 
-import com.google.common.collect.ImmutableSet;
-
+import static org.testng.Assert.assertEquals;
+import static org.testng.Assert.assertFalse;
+import static org.testng.Assert.assertNotEquals;
+import static org.testng.Assert.assertThrows;
+import static org.testng.Assert.assertTrue;
+import static org.testng.Assert.fail;
 import java.lang.reflect.Field;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
-import java.util.concurrent.CompletionException;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionException;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.BooleanSupplier;
 import java.util.stream.Collectors;
 
+import com.google.common.collect.Sets;
 import org.apache.bookkeeper.client.BKException;
 import org.apache.bookkeeper.client.api.ReadHandle;
+import org.apache.bookkeeper.mledger.AsyncCallbacks;
 import org.apache.bookkeeper.mledger.AsyncCallbacks.OffloadCallback;
 import org.apache.bookkeeper.mledger.LedgerOffloader;
 import org.apache.bookkeeper.mledger.ManagedCursor;
 import org.apache.bookkeeper.mledger.ManagedLedgerConfig;
 import org.apache.bookkeeper.mledger.ManagedLedgerException;
 import org.apache.bookkeeper.mledger.Position;
+import org.apache.bookkeeper.mledger.proto.MLDataFormats;
 import org.apache.bookkeeper.mledger.proto.MLDataFormats.ManagedLedgerInfo.LedgerInfo;
 import org.apache.bookkeeper.test.MockedBookKeeperTestCase;
 import org.apache.commons.lang3.tuple.Pair;
-
+import org.apache.pulsar.common.policies.data.OffloadPoliciesImpl;
+import org.apache.pulsar.metadata.api.MetadataStoreException;
+import org.apache.pulsar.metadata.impl.FaultInjectionMetadataStore;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
 import org.testng.Assert;
+import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 public class OffloadPrefixTest extends MockedBookKeeperTestCase {
@@ -60,6 +71,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         config.setMaxEntriesPerLedger(10);
         config.setMinimumRolloverTime(0, TimeUnit.SECONDS);
         config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
 
         int i = 0;
@@ -67,7 +79,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             String content = "entry-" + i;
             ledger.addEntry(content.getBytes());
         }
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
 
         Position p = ledger.getLastConfirmedEntry();
 
@@ -75,17 +87,17 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             String content = "entry-" + i;
             ledger.addEntry(content.getBytes());
         }
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 5);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().size(), 5);
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete()).count(), 0);
         try {
             ledger.offloadPrefix(p);
-            Assert.fail("Should have thrown an exception");
+            fail("Should have thrown an exception");
         } catch (ManagedLedgerException e) {
-            Assert.assertEquals(e.getCause().getClass(), CompletionException.class);
+            assertEquals(e.getMessage(), "NullLedgerOffloader");
         }
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 5);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().size(), 5);
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete()).count(), 0);
 
         // add more entries to ensure we can update the ledger list
@@ -93,8 +105,8 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             String content = "entry-" + i;
             ledger.addEntry(content.getBytes());
         }
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 6);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().size(), 6);
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete()).count(), 0);
     }
 
@@ -105,6 +117,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         config.setMaxEntriesPerLedger(10);
         config.setMinimumRolloverTime(0, TimeUnit.SECONDS);
         config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
         config.setLedgerOffloader(offloader);
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
 
@@ -113,15 +126,60 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             String content = "entry-" + i;
             ledger.addEntry(content.getBytes());
         }
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
 
         ledger.offloadPrefix(ledger.getLastConfirmedEntry());
 
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 3);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete())
                             .map(e -> e.getLedgerId()).collect(Collectors.toSet()),
                             offloader.offloadedLedgers());
+
+        // ledgers should be marked as offloaded
+        ledger.getLedgersInfoAsList().stream().allMatch(l -> l.hasOffloadContext());
+    }
+
+    @Test
+    public void testOffloadFenced() throws Exception {
+        MockLedgerOffloader offloader = new MockLedgerOffloader();
+        ManagedLedgerConfig config = new ManagedLedgerConfig();
+        config.setMaxEntriesPerLedger(10);
+        config.setMinimumRolloverTime(0, TimeUnit.SECONDS);
+        config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
+        config.setLedgerOffloader(offloader);
+        ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
+
+        int i = 0;
+        for (; i < 25; i++) {
+            String content = "entry-" + i;
+            ledger.addEntry(content.getBytes());
+        }
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+
+        metadataStore.failConditional(new MetadataStoreException.BadVersionException("err"), (op, path) ->
+                path.equals("/managed-ledgers/my_test_ledger")
+                        && op == FaultInjectionMetadataStore.OperationType.PUT
+        );
+
+        assertThrows(ManagedLedgerException.ManagedLedgerFencedException.class, () ->
+            ledger.offloadPrefix(ledger.getLastConfirmedEntry()));
+
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+
+        // the offloader actually wrote the data on the storage
+        assertEquals(ledger.getLedgersInfoAsList().stream()
+                        .filter(e -> e.getOffloadContext().getComplete())
+                        .map(e -> e.getLedgerId()).collect(Collectors.toSet()),
+                offloader.offloadedLedgers());
+
+        // but the ledgers should not be marked as offloaded in local memory, as the write to metadata failed
+        ledger.getLedgersInfoAsList().stream().allMatch(l -> !l.hasOffloadContext());
+
+        // check that the ledger is fenced
+        assertEquals(ManagedLedgerImpl.State.Fenced, ledger.getState());
+
     }
 
     @Test
@@ -131,6 +189,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         config.setMaxEntriesPerLedger(10);
         config.setMinimumRolloverTime(0, TimeUnit.SECONDS);
         config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
         config.setLedgerOffloader(offloader);
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
 
@@ -139,24 +198,24 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             String content = "entry-" + i;
             ledger.addEntry(content.getBytes());
         }
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
 
         try {
-            ledger.offloadPrefix(PositionImpl.earliest);
-            Assert.fail("Should have thrown an exception");
+            ledger.offloadPrefix(PositionImpl.EARLIEST);
+            fail("Should have thrown an exception");
         } catch (ManagedLedgerException.InvalidCursorPositionException e) {
             // expected
         }
         try {
-            ledger.offloadPrefix(PositionImpl.latest);
-            Assert.fail("Should have thrown an exception");
+            ledger.offloadPrefix(PositionImpl.LATEST);
+            fail("Should have thrown an exception");
         } catch (ManagedLedgerException.InvalidCursorPositionException e) {
             // expected
         }
 
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete()).count(), 0);
-        Assert.assertEquals(offloader.offloadedLedgers().size(), 0);
+        assertEquals(offloader.offloadedLedgers().size(), 0);
     }
 
     @Test
@@ -166,6 +225,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         config.setMaxEntriesPerLedger(10);
         config.setMinimumRolloverTime(0, TimeUnit.SECONDS);
         config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
         config.setLedgerOffloader(offloader);
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
 
@@ -174,36 +234,76 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             String content = "entry-" + i;
             ledger.addEntry(content.getBytes());
         }
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 2);
+        assertEquals(ledger.getLedgersInfoAsList().size(), 2);
 
         Position p = ledger.getLastConfirmedEntry(); // position at end of second ledger
 
         ledger.addEntry("entry-blah".getBytes());
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
 
         PositionImpl firstUnoffloaded = (PositionImpl)ledger.offloadPrefix(p);
 
         // only the first ledger should have been offloaded
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 3);
-        Assert.assertEquals(offloader.offloadedLedgers().size(), 1);
-        Assert.assertTrue(offloader.offloadedLedgers().contains(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
-        Assert.assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+        assertEquals(offloader.offloadedLedgers().size(), 1);
+        assertTrue(offloader.offloadedLedgers().contains(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
+        assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete()).count(), 1);
-        Assert.assertEquals(firstUnoffloaded.getLedgerId(), ledger.getLedgersInfoAsList().get(1).getLedgerId());
-        Assert.assertEquals(firstUnoffloaded.getEntryId(), 0);
+        assertEquals(firstUnoffloaded.getLedgerId(), ledger.getLedgersInfoAsList().get(1).getLedgerId());
+        assertEquals(firstUnoffloaded.getEntryId(), 0);
 
         // offload again, with the position in the third ledger
         PositionImpl firstUnoffloaded2 = (PositionImpl)ledger.offloadPrefix(ledger.getLastConfirmedEntry());
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 3);
-        Assert.assertEquals(offloader.offloadedLedgers().size(), 2);
-        Assert.assertTrue(offloader.offloadedLedgers().contains(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
-        Assert.assertTrue(offloader.offloadedLedgers().contains(ledger.getLedgersInfoAsList().get(1).getLedgerId()));
-        Assert.assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
-        Assert.assertTrue(ledger.getLedgersInfoAsList().get(1).getOffloadContext().getComplete());
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+        assertEquals(offloader.offloadedLedgers().size(), 2);
+        assertTrue(offloader.offloadedLedgers().contains(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
+        assertTrue(offloader.offloadedLedgers().contains(ledger.getLedgersInfoAsList().get(1).getLedgerId()));
+        assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
+        assertTrue(ledger.getLedgersInfoAsList().get(1).getOffloadContext().getComplete());
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete()).count(), 2);
-        Assert.assertEquals(firstUnoffloaded2.getLedgerId(), ledger.getLedgersInfoAsList().get(2).getLedgerId());
+        assertEquals(firstUnoffloaded2.getLedgerId(), ledger.getLedgersInfoAsList().get(2).getLedgerId());
+    }
+
+    @Test
+    public void testPositionOnLastEmptyLedger() throws Exception {
+        MockLedgerOffloader offloader = new MockLedgerOffloader();
+        ManagedLedgerConfig config = new ManagedLedgerConfig();
+        config.setMaxEntriesPerLedger(10);
+        config.setMinimumRolloverTime(0, TimeUnit.SECONDS);
+        config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setLedgerOffloader(offloader);
+        ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
+
+        for (int i = 0; i < 5; i++) {
+            String content = "entry-" + i;
+            ledger.addEntry(content.getBytes());
+        }
+
+        // Re-open to trigger the case of empty ledger
+        ledger.close();
+        ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
+
+        assertEquals(ledger.getLedgersInfoAsList().size(), 2);
+
+        assertTrue(ledger.getLedgersInfoAsList().get(0).getSize() > 0);
+        assertEquals(ledger.getLedgersInfoAsList().get(1).getSize(), 0);
+
+        // position past the end of first ledger
+        Position p = new PositionImpl(ledger.getLedgersInfoAsList().get(1).getLedgerId(), 0);
+
+        PositionImpl firstUnoffloaded = (PositionImpl)ledger.offloadPrefix(p);
+
+        // only the first ledger should have been offloaded
+        assertEquals(ledger.getLedgersInfoAsList().size(), 2);
+        assertEquals(offloader.offloadedLedgers().size(), 1);
+        assertTrue(offloader.offloadedLedgers().contains(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
+        assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
+        assertEquals(ledger.getLedgersInfoAsList().stream()
+                            .filter(e -> e.getOffloadContext().getComplete()).count(), 1);
+        assertEquals(firstUnoffloaded.getLedgerId(), ledger.getLedgersInfoAsList().get(1).getLedgerId());
+        assertEquals(firstUnoffloaded.getEntryId(), 0);
     }
 
     @Test
@@ -233,7 +333,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             String content = "entry-" + i;
             ledger.addEntry(content.getBytes());
         }
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
 
         PositionImpl startOfSecondLedger = PositionImpl.get(ledger.getLedgersInfoAsList().get(1).getLedgerId(), 0);
         PositionImpl startOfThirdLedger = PositionImpl.get(ledger.getLedgersInfoAsList().get(2).getLedgerId(), 0);
@@ -246,19 +346,19 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         // trim first ledger
         cursor.markDelete(startOfSecondLedger, new HashMap<>());
         assertEventuallyTrue(() -> ledger.getLedgersInfoAsList().size() == 2);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete()).count(), 0);
 
         // complete offloading
         blocker.complete(null);
         cbPromise.get();
 
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 2);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().size(), 2);
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete()).count(), 1);
-        Assert.assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
-        Assert.assertEquals(offloader.offloadedLedgers().size(), 1);
-        Assert.assertTrue(offloader.offloadedLedgers().contains(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
+        assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
+        assertEquals(offloader.offloadedLedgers().size(), 1);
+        assertTrue(offloader.offloadedLedgers().contains(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
     }
 
     @Test
@@ -296,7 +396,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             String content = "entry-" + i;
             ledger.addEntry(content.getBytes());
         }
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
 
         PositionImpl startOfSecondLedger = PositionImpl.get(ledger.getLedgersInfoAsList().get(1).getLedgerId(), 0);
         PositionImpl startOfThirdLedger = PositionImpl.get(ledger.getLedgersInfoAsList().get(2).getLedgerId(), 0);
@@ -310,21 +410,21 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         long trimmedLedger = ledger.getLedgersInfoAsList().get(0).getLedgerId();
         cursor.markDelete(startOfSecondLedger, new HashMap<>());
         assertEventuallyTrue(() -> ledger.getLedgersInfoAsList().size() == 2);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getLedgerId() == trimmedLedger).count(), 0);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete()).count(), 0);
 
         // complete offloading
         blocker.complete(trimmedLedger);
         cbPromise.get();
 
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 2);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().size(), 2);
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete()).count(), 1);
-        Assert.assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
-        Assert.assertEquals(offloader.offloadedLedgers().size(), 1);
-        Assert.assertTrue(offloader.offloadedLedgers().contains(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
+        assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
+        assertEquals(offloader.offloadedLedgers().size(), 1);
+        assertTrue(offloader.offloadedLedgers().contains(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
     }
 
     @Test
@@ -334,6 +434,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         config.setMaxEntriesPerLedger(10);
         config.setMinimumRolloverTime(0, TimeUnit.SECONDS);
         config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
         config.setLedgerOffloader(offloader);
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
 
@@ -347,15 +448,15 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
 
         try {
             ledger.offloadPrefix(p);
-            Assert.fail("Should fail because ML is closed");
+            fail("Should fail because ML is closed");
         } catch (ManagedLedgerException.ManagedLedgerAlreadyClosedException e) {
             // expected
         }
 
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 3);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete()).count(), 0);
-        Assert.assertEquals(offloader.offloadedLedgers().size(), 0);
+        assertEquals(offloader.offloadedLedgers().size(), 0);
     }
 
     @Test
@@ -365,6 +466,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         config.setMaxEntriesPerLedger(10);
         config.setMinimumRolloverTime(0, TimeUnit.SECONDS);
         config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
         config.setLedgerOffloader(offloader);
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
 
@@ -373,20 +475,20 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             String content = "entry-" + i;
             ledger.addEntry(content.getBytes());
         }
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
 
         ledger.offloadPrefix(ledger.getLastConfirmedEntry());
 
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 3);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete())
                             .map(e -> e.getLedgerId()).collect(Collectors.toSet()),
                             offloader.offloadedLedgers());
 
         ledger.offloadPrefix(ledger.getLastConfirmedEntry());
 
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 3);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete())
                             .map(e -> e.getLedgerId()).collect(Collectors.toSet()),
                             offloader.offloadedLedgers());
@@ -400,6 +502,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         config.setMaxEntriesPerLedger(10);
         config.setMinimumRolloverTime(0, TimeUnit.SECONDS);
         config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
         config.setLedgerOffloader(offloader);
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
 
@@ -408,25 +511,25 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             String content = "entry-" + i;
             ledger.addEntry(content.getBytes());
         }
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 4);
+        assertEquals(ledger.getLedgersInfoAsList().size(), 4);
 
         // mark ledgers to fail
-        promise.complete(ImmutableSet.of(ledger.getLedgersInfoAsList().get(failIndex).getLedgerId()));
+        promise.complete(Set.of(ledger.getLedgersInfoAsList().get(failIndex).getLedgerId()));
 
         try {
             ledger.offloadPrefix(ledger.getLastConfirmedEntry());
         } catch (ManagedLedgerException e) {
-            Assert.assertEquals(e.getCause().getClass(), CompletionException.class);
+            assertEquals(e.getCause().getClass(), CompletionException.class);
         }
 
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 4);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().size(), 4);
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete())
                             .map(e -> e.getLedgerId()).collect(Collectors.toSet()),
                             offloader.offloadedLedgers());
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete()).count(), 2);
-        Assert.assertFalse(ledger.getLedgersInfoAsList().get(failIndex).getOffloadContext().getComplete());
+        assertFalse(ledger.getLedgersInfoAsList().get(failIndex).getOffloadContext().getComplete());
     }
 
     @Test
@@ -463,9 +566,9 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         ledger.addEntry("foobar".getBytes());
 
         Position p = ledger.getLastConfirmedEntry();
-        Assert.assertEquals(p, ledger.offloadPrefix(ledger.getLastConfirmedEntry()));
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 1);
-        Assert.assertEquals(offloader.offloadedLedgers().size(), 0);
+        assertEquals(p, ledger.offloadPrefix(ledger.getLastConfirmedEntry()));
+        assertEquals(ledger.getLedgersInfoAsList().size(), 1);
+        assertEquals(offloader.offloadedLedgers().size(), 0);
     }
 
     @Test
@@ -520,28 +623,28 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         } catch (ManagedLedgerException e) {
             // expected
         }
-        Assert.assertTrue(errorSet.isEmpty());
-        Assert.assertEquals(failedOffloads.size(), 1);
-        Assert.assertEquals(deleted.size(), 0);
+        assertTrue(errorSet.isEmpty());
+        assertEquals(failedOffloads.size(), 1);
+        assertEquals(deleted.size(), 0);
 
         long expectedFailedLedger = ledger.getLedgersInfoAsList().get(0).getLedgerId();
         UUID expectedFailedUUID = new UUID(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getUidMsb(),
                                            ledger.getLedgersInfoAsList().get(0).getOffloadContext().getUidLsb());
-        Assert.assertEquals(failedOffloads.stream().findFirst().get(),
+        assertEquals(failedOffloads.stream().findFirst().get(),
                             Pair.of(expectedFailedLedger, expectedFailedUUID));
-        Assert.assertFalse(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
+        assertFalse(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
 
         // try offload again
         ledger.offloadPrefix(ledger.getLastConfirmedEntry());
 
-        Assert.assertEquals(failedOffloads.size(), 1);
-        Assert.assertEquals(deleted.size(), 1);
-        Assert.assertEquals(deleted.stream().findFirst().get(),
+        assertEquals(failedOffloads.size(), 1);
+        assertEquals(deleted.size(), 1);
+        assertEquals(deleted.stream().findFirst().get(),
                             Pair.of(expectedFailedLedger, expectedFailedUUID));
         UUID successUUID = new UUID(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getUidMsb(),
                                     ledger.getLedgersInfoAsList().get(0).getOffloadContext().getUidLsb());
-        Assert.assertFalse(successUUID.equals(expectedFailedUUID));
-        Assert.assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
+        assertNotEquals(expectedFailedUUID, successUUID);
+        assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
     }
 
     @Test
@@ -555,29 +658,89 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         config.setMaxEntriesPerLedger(10);
         config.setMinimumRolloverTime(0, TimeUnit.SECONDS);
         config.setRetentionTime(0, TimeUnit.MINUTES);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadDeletionLagInMillis(100L);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(100L);
         config.setLedgerOffloader(offloader);
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
         ManagedCursor cursor = ledger.openCursor("foobar");
+
         for (int i = 0; i < 15; i++) {
             String content = "entry-" + i;
             ledger.addEntry(content.getBytes());
         }
 
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 2);
+        assertEquals(ledger.getLedgersInfoAsList().size(), 2);
         ledger.offloadPrefix(ledger.getLastConfirmedEntry());
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 2);
+        assertEquals(ledger.getLedgersInfoAsList().size(), 2);
 
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete()).count(), 1);
-        Assert.assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
+        assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
         long firstLedger = ledger.getLedgersInfoAsList().get(0).getLedgerId();
         long secondLedger = ledger.getLedgersInfoAsList().get(1).getLedgerId();
 
         cursor.markDelete(ledger.getLastConfirmedEntry());
         assertEventuallyTrue(() -> ledger.getLedgersInfoAsList().size() == 1);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().get(0).getLedgerId(), secondLedger);
+        assertEquals(ledger.getLedgersInfoAsList().get(0).getLedgerId(), secondLedger);
 
         assertEventuallyTrue(() -> offloader.deletedOffloads().contains(firstLedger));
+    }
+
+    @Test
+    public void testOffloadDeleteClosedLedger() throws Exception {
+        MockLedgerOffloader offloader = new MockLedgerOffloader();
+        ManagedLedgerConfig config = new ManagedLedgerConfig();
+        config.setMaxEntriesPerLedger(10);
+        config.setMinimumRolloverTime(0, TimeUnit.SECONDS);
+        config.setRetentionTime(0, TimeUnit.MINUTES);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadDeletionLagInMillis(100L);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(100L);
+        config.setLedgerOffloader(offloader);
+        ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
+        ManagedCursor cursor = ledger.openCursor("foobar");
+
+        for (int i = 0; i < 15; i++) {
+            String content = "entry-" + i;
+            ledger.addEntry(content.getBytes());
+        }
+
+        assertEquals(ledger.getLedgersInfoAsList().size(), 2);
+        ledger.offloadPrefix(ledger.getLastConfirmedEntry());
+        assertEquals(ledger.getLedgersInfoAsList().size(), 2);
+
+        assertEquals(ledger.getLedgersInfoAsList().stream()
+                .filter(e -> e.getOffloadContext().getComplete()).count(), 1);
+        assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().getComplete());
+
+        Set<Long> offloadedledgers = Sets.newHashSet(offloader.offloadedLedgers());
+        assertTrue(offloadedledgers.size() > 0);
+
+        Set<Long> bkLedgersInMLedger = Sets.newHashSet(ledger.getLedgersInfo().keySet());
+        assertTrue(bkLedgersInMLedger.size() > 0);
+
+        factory.close(ledger);
+        ledger.close();
+
+        AtomicInteger success = new AtomicInteger(0);
+        factory.asyncDelete("my_test_ledger", CompletableFuture.completedFuture(config),
+                new AsyncCallbacks.DeleteLedgerCallback() {
+            @Override
+            public void deleteLedgerComplete(Object ctx) {
+                success.set(1);
+            }
+
+            @Override
+            public void deleteLedgerFailed(ManagedLedgerException exception, Object ctx) {
+                success.set(-1);
+            }
+        }, null);
+        assertEventuallyTrue(() -> success.get() == 1);
+        Set<Long> deletedledgers = offloader.deletedOffloads();
+        assertEquals(offloadedledgers, deletedledgers);
+
+        for (long ledgerId: bkLedgersInMLedger) {
+            assertFalse(bkc.getLedgers().contains(ledgerId));
+        }
     }
 
     @Test
@@ -611,27 +774,27 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             ledger.addEntry(content.getBytes());
         }
 
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 2);
+        assertEquals(ledger.getLedgersInfoAsList().size(), 2);
         try {
             ledger.offloadPrefix(ledger.getLastConfirmedEntry());
         } catch (ManagedLedgerException mle) {
             // expected
         }
 
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 2);
+        assertEquals(ledger.getLedgersInfoAsList().size(), 2);
 
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete()).count(), 0);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().hasUidMsb()).count(), 1);
-        Assert.assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().hasUidMsb());
+        assertTrue(ledger.getLedgersInfoAsList().get(0).getOffloadContext().hasUidMsb());
 
         long firstLedger = ledger.getLedgersInfoAsList().get(0).getLedgerId();
         long secondLedger = ledger.getLedgersInfoAsList().get(1).getLedgerId();
 
         cursor.markDelete(ledger.getLastConfirmedEntry());
         assertEventuallyTrue(() -> ledger.getLedgersInfoAsList().size() == 1);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().get(0).getLedgerId(), secondLedger);
+        assertEquals(ledger.getLedgersInfoAsList().get(0).getLedgerId(), secondLedger);
 
         assertEventuallyTrue(() -> offloader.deletedOffloads().contains(firstLedger));
     }
@@ -643,6 +806,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         config.setMaxEntriesPerLedger(10);
         config.setMinimumRolloverTime(0, TimeUnit.SECONDS);
         config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
         config.setLedgerOffloader(offloader);
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
 
@@ -651,7 +815,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             String content = "entry-" + i;
             ledger.addEntry(content.getBytes());
         }
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 4);
+        assertEquals(ledger.getLedgersInfoAsList().size(), 4);
 
         long firstLedgerId = ledger.getLedgersInfoAsList().get(0).getLedgerId();
         long secondLedgerId = ledger.getLedgersInfoAsList().get(1).getLedgerId();
@@ -666,15 +830,15 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
                     ledgers.get(secondLedgerId).toBuilder().setEntries(0).setSize(0).build());
 
         PositionImpl firstUnoffloaded = (PositionImpl)ledger.offloadPrefix(ledger.getLastConfirmedEntry());
-        Assert.assertEquals(firstUnoffloaded.getLedgerId(), fourthLedgerId);
-        Assert.assertEquals(firstUnoffloaded.getEntryId(), 0);
+        assertEquals(firstUnoffloaded.getLedgerId(), fourthLedgerId);
+        assertEquals(firstUnoffloaded.getEntryId(), 0);
 
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 4);
-        Assert.assertEquals(ledger.getLedgersInfoAsList().stream()
+        assertEquals(ledger.getLedgersInfoAsList().size(), 4);
+        assertEquals(ledger.getLedgersInfoAsList().stream()
                             .filter(e -> e.getOffloadContext().getComplete())
                             .map(e -> e.getLedgerId()).collect(Collectors.toSet()),
                             offloader.offloadedLedgers());
-        Assert.assertEquals(offloader.offloadedLedgers(), ImmutableSet.of(firstLedgerId, thirdLedgerId));
+        assertEquals(offloader.offloadedLedgers(), Set.of(firstLedgerId, thirdLedgerId));
     }
 
     private static byte[] buildEntry(int size, String pattern) {
@@ -687,32 +851,83 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         return entry;
     }
 
-    @Test
-    public void testAutoTriggerOffload() throws Exception {
+    @DataProvider(name = "testAutoTriggerOffload")
+    public Object[][] testAutoTriggerOffloadProvider() {
+        return new Object[][]{
+                {null, 0L},
+                {100L, null},
+                {-1L, null},
+                {null, null},
+                {-1L, -1L},
+                {1L, 1L},
+                {100L, Long.MAX_VALUE}
+        };
+    }
+
+    @Test(dataProvider = "testAutoTriggerOffload")
+    public void testAutoTriggerOffload(Long sizeThreshold, Long timeThreshold) throws Exception {
         MockLedgerOffloader offloader = new MockLedgerOffloader();
         ManagedLedgerConfig config = new ManagedLedgerConfig();
         config.setMaxEntriesPerLedger(10);
-        config.setOffloadAutoTriggerSizeThresholdBytes(100);
         config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(sizeThreshold);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInSeconds(timeThreshold);
         config.setLedgerOffloader(offloader);
 
-        ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
+        ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger" + UUID.randomUUID(), config);
 
         // Ledger will roll twice, offload will run on first ledger after second closed
         for (int i = 0; i < 25; i++) {
             ledger.addEntry(buildEntry(10, "entry-" + i));
         }
 
-        Assert.assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
 
-        // offload should eventually be triggered
-        assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 1);
-        Assert.assertEquals(offloader.offloadedLedgers(),
-                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
+        if (sizeThreshold == null && timeThreshold != null && timeThreshold == 0L) {
+            // All the inactive ledgers will be offloaded
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 2);
+            List<Long> allLedgerIds = ledger.getLedgersInfoAsList().stream().map(LedgerInfo::getLedgerId).toList();
+            assertEquals(offloader.offloadedLedgers(), Set.of(allLedgerIds.get(0), allLedgerIds.get(1)));
+        } else if (sizeThreshold != null && sizeThreshold == 100L && timeThreshold == null) {
+            // The last 2 ledgers won't be offloaded
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 1);
+            List<Long> allLedgerIds = ledger.getLedgersInfoAsList().stream().map(LedgerInfo::getLedgerId).toList();
+            assertEquals(offloader.offloadedLedgers(), Set.of(allLedgerIds.get(0)));
+        } else if (sizeThreshold != null && sizeThreshold == -1L && timeThreshold == null) {
+            // Offloading is disabled, no ledgers will be offloaded.
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 0);
+            assertEquals(offloader.offloadedLedgers().size(), 0);
+        } else if (sizeThreshold == null && timeThreshold == null) {
+            // Offloading is disabled, no ledgers will be offloaded.
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 0);
+            assertEquals(offloader.offloadedLedgers().size(), 0);
+        } else if (sizeThreshold != null && sizeThreshold == 1L && timeThreshold != null && timeThreshold == 1L) {
+            // All the inactive ledgers will be offloaded
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 2);
+            List<Long> allLedgerIds = ledger.getLedgersInfoAsList().stream().map(LedgerInfo::getLedgerId).toList();
+            assertEquals(offloader.offloadedLedgers(), Set.of(allLedgerIds.get(0), allLedgerIds.get(1)));
+        } else if (sizeThreshold != null && sizeThreshold == 100L
+                && timeThreshold != null && timeThreshold == Long.MAX_VALUE) {
+            // The last 2 ledgers won't be offloaded
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 1);
+            List<Long> allLedgerIds = ledger.getLedgersInfoAsList().stream().map(LedgerInfo::getLedgerId).toList();
+            assertEquals(offloader.offloadedLedgers(), Set.of(allLedgerIds.get(0)));
+        }
     }
 
-    @Test
-    public void manualTriggerWhileAutoInProgress() throws Exception {
+    @DataProvider(name = "manualTriggerWhileAutoInProgress")
+    public Object[][] manualTriggerWhileAutoInProgressProvider() {
+        return new Object[][]{
+                {null, 0L},
+                {100L, null},
+                {1L, 1L},
+                {0L, 0L}
+        };
+    }
+
+    @Test(dataProvider = "manualTriggerWhileAutoInProgress")
+    public void manualTriggerWhileAutoInProgress(Long sizeThreshold, Long timeThreshold) throws Exception {
         CompletableFuture<Void> slowOffload = new CompletableFuture<>();
         CountDownLatch offloadRunning = new CountDownLatch(1);
         MockLedgerOffloader offloader = new MockLedgerOffloader() {
@@ -727,8 +942,10 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
 
         ManagedLedgerConfig config = new ManagedLedgerConfig();
         config.setMaxEntriesPerLedger(10);
-        config.setOffloadAutoTriggerSizeThresholdBytes(100);
         config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(sizeThreshold);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInSeconds(timeThreshold);
         config.setLedgerOffloader(offloader);
 
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
@@ -746,33 +963,64 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
 
         try {
             ledger.offloadPrefix(p);
-            Assert.fail("Shouldn't have succeeded");
+            fail("Shouldn't have succeeded");
         } catch (ManagedLedgerException.OffloadInProgressException e) {
             // expected
         }
 
         slowOffload.complete(null);
 
-        // eventually all over threshold will be offloaded
-        assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
-        Assert.assertEquals(offloader.offloadedLedgers(),
-                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
-                                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
-                                            ledger.getLedgersInfoAsList().get(2).getLedgerId()));
+        Assert.assertEquals(5, ledger.getLedgersInfoAsList().size());
+
+        if (null == sizeThreshold && timeThreshold != null && timeThreshold.equals(0L)) {
+            // All the inactive ledgers will be offloaded.
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 4);
+            assertEquals(offloader.offloadedLedgers(),
+                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(2).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(3).getLedgerId()));
+        } else if (sizeThreshold != null && sizeThreshold.equals(100L) && timeThreshold == null) {
+            // the last 2 ledgers won't be offloaded.
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
+            assertEquals(offloader.offloadedLedgers(),
+                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(2).getLedgerId()));
+        } else if (sizeThreshold != null && sizeThreshold.equals(1L)
+                && timeThreshold != null && timeThreshold.equals(1L)) {
+            // the last 1 ledger wont be offloaded.
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 4);
+            assertEquals(offloader.offloadedLedgers(),
+                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(2).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(3).getLedgerId()));
+        } else if (sizeThreshold != null && sizeThreshold.equals(0L)
+                && timeThreshold != null && timeThreshold.equals(0L)) {
+            // All the inactive ledgers will be offloaded.
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 4);
+            assertEquals(offloader.offloadedLedgers(),
+                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(2).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(3).getLedgerId()));
+        }
+
 
         // then a manual offload can run and offload the one ledger under the threshold
         ledger.offloadPrefix(p);
 
-        Assert.assertEquals(offloader.offloadedLedgers().size(), 4);
-        Assert.assertEquals(offloader.offloadedLedgers(),
-                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+        assertEquals(offloader.offloadedLedgers().size(), 4);
+        assertEquals(offloader.offloadedLedgers(),
+                Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(1).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(2).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(3).getLedgerId()));
     }
 
-    @Test
-    public void autoTriggerWhileManualInProgress() throws Exception {
+    @Test(dataProvider = "manualTriggerWhileAutoInProgress")
+    public void autoTriggerWhileManualInProgress(Long sizeThreshold, Long timeThreshold) throws Exception {
         CompletableFuture<Void> slowOffload = new CompletableFuture<>();
         CountDownLatch offloadRunning = new CountDownLatch(1);
         MockLedgerOffloader offloader = new MockLedgerOffloader() {
@@ -787,8 +1035,10 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
 
         ManagedLedgerConfig config = new ManagedLedgerConfig();
         config.setMaxEntriesPerLedger(10);
-        config.setOffloadAutoTriggerSizeThresholdBytes(100);
         config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(sizeThreshold);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInSeconds(timeThreshold);
         config.setLedgerOffloader(offloader);
 
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
@@ -808,21 +1058,47 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             ledger.addEntry(buildEntry(10, "entry-" + i));
         }
 
+        Assert.assertEquals(4, ledger.getLedgersInfoAsList().size());
+
         // allow the manual offload to complete
         slowOffload.complete(null);
 
-        Assert.assertEquals(cbPromise.join(),
-                            PositionImpl.get(ledger.getLedgersInfoAsList().get(1).getLedgerId(), 0));
-
-        // auto trigger should eventually offload everything else over threshold
-        assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 2);
-        Assert.assertEquals(offloader.offloadedLedgers(),
-                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
-                                            ledger.getLedgersInfoAsList().get(1).getLedgerId()));
+        if (null == sizeThreshold && timeThreshold != null && timeThreshold.equals(0L)) {
+            // All the inactive ledgers will be offloaded.
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
+            assertEquals(offloader.offloadedLedgers(),
+                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(2).getLedgerId()));
+        } else if (sizeThreshold != null && sizeThreshold.equals(100L) && timeThreshold == null) {
+            // the last 2 ledgers won't be offloaded.
+            assertEquals(cbPromise.join(),
+                    PositionImpl.get(ledger.getLedgersInfoAsList().get(1).getLedgerId(), 0));
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 2);
+            assertEquals(offloader.offloadedLedgers(),
+                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(1).getLedgerId()));
+        } else if (sizeThreshold != null && sizeThreshold.equals(1L)
+                && timeThreshold != null && timeThreshold.equals(1L)) {
+            // the last 1 ledger wont be offloaded.
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
+            assertEquals(offloader.offloadedLedgers(),
+                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(2).getLedgerId()));
+        } else if (sizeThreshold != null && sizeThreshold.equals(0L)
+                && timeThreshold != null && timeThreshold.equals(0L)) {
+            // All the inactive ledgers will be offloaded.
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
+            assertEquals(offloader.offloadedLedgers(),
+                    Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
+                            ledger.getLedgersInfoAsList().get(2).getLedgerId()));
+        }
     }
 
-    @Test
-    public void multipleAutoTriggers() throws Exception {
+    @Test(dataProvider = "testAutoTriggerOffload")
+    public void multipleAutoTriggers(Long sizeThreshold, Long timeThreshold) throws Exception {
         CompletableFuture<Void> slowOffload = new CompletableFuture<>();
         CountDownLatch offloadRunning = new CountDownLatch(1);
         MockLedgerOffloader offloader = new MockLedgerOffloader() {
@@ -837,8 +1113,10 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
 
         ManagedLedgerConfig config = new ManagedLedgerConfig();
         config.setMaxEntriesPerLedger(10);
-        config.setOffloadAutoTriggerSizeThresholdBytes(100);
         config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(sizeThreshold);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInSeconds(timeThreshold);
         config.setLedgerOffloader(offloader);
 
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
@@ -847,7 +1125,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         for (int i = 0; i < 25; i++) {
             ledger.addEntry(buildEntry(10, "entry-" + i));
         }
-        offloadRunning.await();
+        offloadRunning.await(5, TimeUnit.SECONDS);
 
         // trigger a bunch more rolls. Eventually there will be 5 ledgers.
         // first 3 should be offloaded, 4th is 100bytes, 5th is 0 bytes.
@@ -859,21 +1137,65 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         // allow the first offload to continue
         slowOffload.complete(null);
 
-        assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
-        Assert.assertEquals(offloader.offloadedLedgers(),
-                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
-                                            ledger.getLedgersInfoAsList().get(1).getLedgerId(),
-                                            ledger.getLedgersInfoAsList().get(2).getLedgerId()));
+        Assert.assertEquals(5, ledger.getLedgersInfoAsList().size());
+
+        if (sizeThreshold == null && timeThreshold != null && timeThreshold == 0L) {
+            // All the inactive ledgers will be offloaded
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 4);
+            List<Long> allLedgerIds = ledger.getLedgersInfoAsList().stream().map(LedgerInfo::getLedgerId).toList();
+            assertEquals(offloader.offloadedLedgers(),
+                    Set.of(allLedgerIds.get(0),
+                            allLedgerIds.get(1),
+                            allLedgerIds.get(2),
+                            allLedgerIds.get(3))
+            );
+        } else if (sizeThreshold != null && sizeThreshold == 100L && timeThreshold == null) {
+            // The last 2 ledgers won't be offloaded
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 3);
+            List<Long> allLedgerIds = ledger.getLedgersInfoAsList().stream().map(LedgerInfo::getLedgerId).toList();
+            assertEquals(offloader.offloadedLedgers(),
+                    Set.of(allLedgerIds.get(0),
+                            allLedgerIds.get(1),
+                            allLedgerIds.get(2))
+            );
+        } else if (sizeThreshold != null && sizeThreshold == -1L && timeThreshold == null) {
+            // Offloading is disabled, no ledgers will be offloaded.
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 0);
+            assertEquals(offloader.offloadedLedgers().size(), 0);
+        } else if (sizeThreshold == null && timeThreshold == null) {
+            // Offloading is disabled, no ledgers will be offloaded.
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 0);
+            assertEquals(offloader.offloadedLedgers().size(), 0);
+        } else if (sizeThreshold != null && sizeThreshold == 1L && timeThreshold != null && timeThreshold == 1L) {
+            // All the inactive ledgers will be offloaded
+            assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 4);
+            List<Long> allLedgerIds = ledger.getLedgersInfoAsList().stream().map(LedgerInfo::getLedgerId).toList();
+            assertEquals(offloader.offloadedLedgers(),
+                    Set.of(allLedgerIds.get(0),
+                            allLedgerIds.get(1),
+                            allLedgerIds.get(2),
+                            allLedgerIds.get(3))
+            );
+        }
     }
 
-    @Test
-    public void offloadAsSoonAsClosed() throws Exception {
+    @DataProvider(name = "offloadAsSoonAsClosed")
+    public Object[][] offloadAsSoonAsClosedProvider() {
+        return new Object[][]{
+                {null, 0L},
+                {0L, null}
+        };
+    }
 
+    @Test(dataProvider = "offloadAsSoonAsClosed")
+    public void offloadAsSoonAsClosed(Long sizeThreshold, Long timeThreshold) throws Exception {
         MockLedgerOffloader offloader = new MockLedgerOffloader();
         ManagedLedgerConfig config = new ManagedLedgerConfig();
         config.setMaxEntriesPerLedger(10);
-        config.setOffloadAutoTriggerSizeThresholdBytes(0);
         config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInBytes(sizeThreshold);
+        offloader.getOffloadPolicies().setManagedLedgerOffloadThresholdInSeconds(timeThreshold);
         config.setLedgerOffloader(offloader);
 
         ManagedLedgerImpl ledger = (ManagedLedgerImpl)factory.open("my_test_ledger", config);
@@ -883,16 +1205,16 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         }
 
         assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 1);
-        Assert.assertEquals(offloader.offloadedLedgers(),
-                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
+        assertEquals(offloader.offloadedLedgers(),
+                Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId()));
 
         for (int i = 0; i < 10; i++) {
             ledger.addEntry(buildEntry(10, "entry-" + i));
         }
 
         assertEventuallyTrue(() -> offloader.offloadedLedgers().size() == 2);
-        Assert.assertEquals(offloader.offloadedLedgers(),
-                            ImmutableSet.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
+        assertEquals(offloader.offloadedLedgers(),
+                Set.of(ledger.getLedgersInfoAsList().get(0).getLedgerId(),
                                             ledger.getLedgersInfoAsList().get(1).getLedgerId()));
     }
 
@@ -902,7 +1224,7 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         for (int i = 0; i < 30 && !predicate.getAsBoolean(); i++) {
             Thread.sleep(100);
         }
-        Assert.assertTrue(predicate.getAsBoolean());
+        assertTrue(predicate.getAsBoolean());
     }
 
     static class OffloadCallbackPromise extends CompletableFuture<Position> implements OffloadCallback {
@@ -918,8 +1240,13 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
     }
 
     static class MockLedgerOffloader implements LedgerOffloader {
+        interface InjectAfterOffload {
+            void call();
+        }
+
         ConcurrentHashMap<Long, UUID> offloads = new ConcurrentHashMap<Long, UUID>();
         ConcurrentHashMap<Long, UUID> deletes = new ConcurrentHashMap<Long, UUID>();
+        InjectAfterOffload inject = null;
 
         Set<Long> offloadedLedgers() {
             return offloads.keySet();
@@ -928,6 +1255,15 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
         Set<Long> deletedOffloads() {
             return deletes.keySet();
         }
+
+        OffloadPoliciesImpl offloadPolicies = OffloadPoliciesImpl.create("S3", "", "", "",
+                null, null,
+                null, null,
+                OffloadPoliciesImpl.DEFAULT_MAX_BLOCK_SIZE_IN_BYTES,
+                OffloadPoliciesImpl.DEFAULT_READ_BUFFER_SIZE_IN_BYTES,
+                OffloadPoliciesImpl.DEFAULT_OFFLOAD_THRESHOLD_IN_BYTES,
+                OffloadPoliciesImpl.DEFAULT_OFFLOAD_DELETION_LAG_IN_MILLIS,
+                OffloadPoliciesImpl.DEFAULT_OFFLOADED_READ_PRIORITY);
 
         @Override
         public String getOffloadDriverName() {
@@ -943,6 +1279,10 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
                 promise.complete(null);
             } else {
                 promise.completeExceptionally(new Exception("Already exists exception"));
+            }
+
+            if (inject != null) {
+                inject.call();
             }
             return promise;
         }
@@ -967,6 +1307,53 @@ public class OffloadPrefixTest extends MockedBookKeeperTestCase {
             }
             return promise;
         };
+
+        @Override
+        public OffloadPoliciesImpl getOffloadPolicies() {
+            return offloadPolicies;
+        }
+
+        @Override
+        public void close() {
+
+        }
+    }
+
+    @Test
+    public void testFailByZk() throws Exception {
+        MockLedgerOffloader offloader = new MockLedgerOffloader();
+        ManagedLedgerConfig config = new ManagedLedgerConfig();
+        config.setMaxEntriesPerLedger(10);
+        config.setMinimumRolloverTime(0, TimeUnit.SECONDS);
+        config.setRetentionTime(10, TimeUnit.MINUTES);
+        config.setRetentionSizeInMB(10);
+        config.setLedgerOffloader(offloader);
+        ManagedLedgerImpl ledger = (ManagedLedgerImpl) factory.open("my_test_ledger", config);
+
+        int i = 0;
+        for (; i < 25; i++) {
+            String content = "entry-" + i;
+            ledger.addEntry(content.getBytes());
+        }
+        assertEquals(ledger.getLedgersInfoAsList().size(), 3);
+
+        offloader.inject = () -> {
+            try {
+                stopMetadataStore();
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+        };
+
+        try {
+            ledger.offloadPrefix(ledger.getLastConfirmedEntry());
+        } catch (Exception e) {
+
+        }
+        final LedgerInfo ledgerInfo = ledger.getLedgersInfoAsList().get(0);
+        final MLDataFormats.OffloadContext offloadContext = ledgerInfo.getOffloadContext();
+        //should not set complete when
+        assertEquals(offloadContext.getComplete(), false);
     }
 
     static class ErroringMockLedgerOffloader extends MockLedgerOffloader {
