@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,43 +18,62 @@
  */
 package org.apache.pulsar.broker;
 
+import java.util.Map;
 import org.apache.pulsar.common.policies.data.BacklogQuota;
 import org.apache.pulsar.common.policies.data.DispatchRate;
 import org.apache.pulsar.common.policies.data.SubscribeRate;
-
-import java.util.Collections;
-import java.util.Map;
+import org.apache.pulsar.common.policies.data.impl.BacklogQuotaImpl;
 
 public class ConfigHelper {
     private ConfigHelper() {}
 
 
     public static Map<BacklogQuota.BacklogQuotaType, BacklogQuota> backlogQuotaMap(ServiceConfiguration configuration) {
-        return Collections.singletonMap(BacklogQuota.BacklogQuotaType.destination_storage,
-                backlogQuota(configuration));
+        return Map.of(BacklogQuota.BacklogQuotaType.destination_storage,
+                sizeBacklogQuota(configuration),
+                BacklogQuota.BacklogQuotaType.message_age,
+                timeBacklogQuota(configuration));
     }
 
-    public static BacklogQuota backlogQuota(ServiceConfiguration configuration) {
-        return new BacklogQuota(
-                configuration.getBacklogQuotaDefaultLimitGB() * 1024 * 1024 * 1024,
-                configuration.getBacklogQuotaDefaultRetentionPolicy()
-        );
+    public static BacklogQuota sizeBacklogQuota(ServiceConfiguration configuration) {
+        long backlogQuotaBytes = configuration.getBacklogQuotaDefaultLimitGB() > 0
+                ? ((long) (configuration.getBacklogQuotaDefaultLimitGB() * BacklogQuotaImpl.BYTES_IN_GIGABYTE))
+                : configuration.getBacklogQuotaDefaultLimitBytes();
+        return BacklogQuota.builder()
+                .limitSize(backlogQuotaBytes)
+                .retentionPolicy(configuration.getBacklogQuotaDefaultRetentionPolicy())
+                .build();
     }
 
-    public static DispatchRate dispatchRate(ServiceConfiguration configuration) {
-        return new DispatchRate(
-                configuration.getDispatchThrottlingRatePerTopicInMsg(),
-                configuration.getDispatchThrottlingRatePerTopicInByte(),
-                1
-        );
+    public static BacklogQuota timeBacklogQuota(ServiceConfiguration configuration) {
+        return BacklogQuota.builder()
+                .limitTime(configuration.getBacklogQuotaDefaultLimitSecond())
+                .retentionPolicy(configuration.getBacklogQuotaDefaultRetentionPolicy())
+                .build();
+    }
+
+    public static DispatchRate topicDispatchRate(ServiceConfiguration configuration) {
+        return DispatchRate.builder()
+                .dispatchThrottlingRateInMsg(configuration.getDispatchThrottlingRatePerTopicInMsg())
+                .dispatchThrottlingRateInByte(configuration.getDispatchThrottlingRatePerTopicInByte())
+                .ratePeriodInSecond(1)
+                .build();
     }
 
     public static DispatchRate subscriptionDispatchRate(ServiceConfiguration configuration) {
-        return new DispatchRate(
-                configuration.getDispatchThrottlingRatePerSubscriptionInMsg(),
-                configuration.getDispatchThrottlingRatePerSubscribeInByte(),
-                1
-        );
+        return DispatchRate.builder()
+                .dispatchThrottlingRateInMsg(configuration.getDispatchThrottlingRatePerSubscriptionInMsg())
+                .dispatchThrottlingRateInByte(configuration.getDispatchThrottlingRatePerSubscriptionInByte())
+                .ratePeriodInSecond(1)
+                .build();
+    }
+
+    public static DispatchRate replicatorDispatchRate(ServiceConfiguration configuration) {
+        return DispatchRate.builder()
+                .dispatchThrottlingRateInMsg(configuration.getDispatchThrottlingRatePerReplicatorInMsg())
+                .dispatchThrottlingRateInByte(configuration.getDispatchThrottlingRatePerReplicatorInByte())
+                .ratePeriodInSecond(1)
+                .build();
     }
 
     public static SubscribeRate subscribeRate(ServiceConfiguration configuration) {
