@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,157 +18,32 @@
  */
 package org.apache.pulsar.client.internal;
 
-import static org.apache.pulsar.client.internal.ReflectionUtils.catchExceptions;
-import static org.apache.pulsar.client.internal.ReflectionUtils.getConstructor;
-import static org.apache.pulsar.client.internal.ReflectionUtils.getStaticMethod;
-import static org.apache.pulsar.client.internal.ReflectionUtils.newClassInstance;
-
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Method;
-import java.util.Map;
-import java.util.function.Supplier;
-
-import lombok.experimental.UtilityClass;
-
-import org.apache.pulsar.client.api.Authentication;
-import org.apache.pulsar.client.api.ClientBuilder;
-import org.apache.pulsar.client.api.MessageId;
-import org.apache.pulsar.client.api.Schema;
-import org.apache.pulsar.client.api.PulsarClientException.UnsupportedAuthenticationException;
-import org.apache.pulsar.client.api.schema.GenericRecord;
-import org.apache.pulsar.common.schema.KeyValue;
-import org.apache.pulsar.common.schema.SchemaInfo;
-import org.apache.pulsar.common.schema.SchemaType;
-
-@SuppressWarnings("unchecked")
-@UtilityClass
+/**
+ * This class loads the implementation for {@link PulsarClientImplementationBinding}
+ * and allows you to decouple the API from the actual implementation.
+ * <b>This class is internal to the Pulsar API implementation, and it is not part of the public API
+ * it is not meant to be used by client applications.</b>
+ */
 public class DefaultImplementation {
-
-    private static final Class<ClientBuilder> CLIENT_BUILDER_IMPL = newClassInstance(
-            "org.apache.pulsar.client.impl.ClientBuilderImpl");
-
-    private static final Constructor<MessageId> MESSAGE_ID_IMPL_long_long_int = getConstructor(
-            "org.apache.pulsar.client.impl.MessageIdImpl",
-            Long.TYPE, Long.TYPE, Integer.TYPE);
-
-    private static final Method MESSAGE_ID_IMPL_fromByteArray = getStaticMethod(
-            "org.apache.pulsar.client.impl.MessageIdImpl", "fromByteArray",
-            byte[].class);
-    private static final Method MESSAGE_ID_IMPL_fromByteArrayWithTopic = getStaticMethod(
-            "org.apache.pulsar.client.impl.MessageIdImpl",
-            "fromByteArrayWithTopic", byte[].class, String.class);
-
-    private static final Constructor<Authentication> AUTHENTICATION_TOKEN_String = getConstructor(
-            "org.apache.pulsar.client.impl.auth.AuthenticationToken", String.class);
-
-    private static final Constructor<Authentication> AUTHENTICATION_TOKEN_Supplier = getConstructor(
-            "org.apache.pulsar.client.impl.auth.AuthenticationToken", Supplier.class);
-
-    private static final Constructor<Authentication> AUTHENTICATION_TLS_String_String = getConstructor(
-            "org.apache.pulsar.client.impl.auth.AuthenticationTls", String.class, String.class);
-
-    public static ClientBuilder newClientBuilder() {
-        return catchExceptions(() -> CLIENT_BUILDER_IMPL.newInstance());
+    private static final PulsarClientImplementationBinding IMPLEMENTATION;
+    static {
+        PulsarClientImplementationBinding impl;
+        try {
+            impl = (PulsarClientImplementationBinding) ReflectionUtils
+                    .newClassInstance("org.apache.pulsar.client.impl.PulsarClientImplementationBindingImpl")
+                    .getConstructor().newInstance();
+        } catch (Throwable error) {
+            throw new RuntimeException("Cannot load Pulsar Client Implementation: " + error, error);
+        }
+        IMPLEMENTATION = impl;
     }
 
-    public static MessageId newMessageId(long ledgerId, long entryId, int partitionIndex) {
-        return catchExceptions(() -> MESSAGE_ID_IMPL_long_long_int.newInstance(ledgerId, entryId, partitionIndex));
+    /**
+     * Access the actual implementation of the Pulsar Client API.
+     * @return the loaded implementation.
+     */
+    public static PulsarClientImplementationBinding getDefaultImplementation() {
+        return IMPLEMENTATION;
     }
 
-    public static MessageId newMessageIdFromByteArray(byte[] data) {
-        return catchExceptions(() -> (MessageId) MESSAGE_ID_IMPL_fromByteArray.invoke(null, data));
-    }
-
-    public static MessageId newMessageIdFromByteArrayWithTopic(byte[] data, String topicName) {
-        return catchExceptions(() -> (MessageId) MESSAGE_ID_IMPL_fromByteArrayWithTopic.invoke(null, data, topicName));
-    }
-
-    public static Authentication newAuthenticationToken(String token) {
-        return catchExceptions(() -> (Authentication) AUTHENTICATION_TOKEN_String.newInstance(token));
-    }
-
-    public static Authentication newAuthenticationToken(Supplier<String> supplier) {
-        return catchExceptions(() -> (Authentication) AUTHENTICATION_TOKEN_Supplier.newInstance(supplier));
-    }
-
-    public static Authentication newAuthenticationTLS(String certFilePath, String keyFilePath) {
-        return catchExceptions(
-                () -> (Authentication) AUTHENTICATION_TLS_String_String.newInstance(certFilePath, keyFilePath));
-    }
-
-    public static Authentication createAuthentication(String authPluginClassName, String authParamsString)
-            throws UnsupportedAuthenticationException {
-        return catchExceptions(
-                () -> (Authentication) getStaticMethod("org.apache.pulsar.client.impl.AuthenticationUtil", "create",
-                        String.class, String.class)
-                                .invoke(null, authPluginClassName, authParamsString));
-    }
-
-    public static Authentication createAuthentication(String authPluginClassName, Map<String, String> authParams)
-            throws UnsupportedAuthenticationException {
-        return catchExceptions(
-                () -> (Authentication) getStaticMethod("org.apache.pulsar.client.impl.AuthenticationUtil", "create",
-                        String.class, Map.class)
-                                .invoke(null, authPluginClassName, authParams));
-    }
-
-    public static Schema<byte[]> newBytesSchema() {
-        return catchExceptions(
-                () -> (Schema<byte[]>) newClassInstance("org.apache.pulsar.client.impl.schema.BytesSchema")
-                        .newInstance());
-    }
-
-    public static Schema<String> newStringSchema() {
-        return catchExceptions(
-                () -> (Schema<String>) newClassInstance("org.apache.pulsar.client.impl.schema.StringSchema")
-                        .newInstance());
-    }
-
-    public static <T> Schema<T> newAvroSchema(Class<T> clazz) {
-        return catchExceptions(
-                () -> (Schema<T>) getStaticMethod("org.apache.pulsar.client.impl.schema.AvroSchema", "of", Class.class)
-                        .invoke(null, clazz));
-    }
-
-    public static <T extends com.google.protobuf.GeneratedMessageV3> Schema<T> newProtobufSchema(Class<T> clazz) {
-        return catchExceptions(
-                () -> (Schema<T>) getStaticMethod("org.apache.pulsar.client.impl.schema.ProtobufSchema", "of", Class.class)
-                        .invoke(null, clazz));
-    }
-
-    public static <T> Schema<T> newJSONSchema(Class<T> clazz) {
-        return catchExceptions(
-                () -> (Schema<T>) getStaticMethod("org.apache.pulsar.client.impl.schema.JSONSchema", "of", Class.class)
-                        .invoke(null, clazz));
-    }
-
-    public static Schema<GenericRecord> newAutoConsumeSchema() {
-        return catchExceptions(
-                () -> (Schema<GenericRecord>) newClassInstance("org.apache.pulsar.client.impl.schema.AutoConsumeSchema")
-                        .newInstance());
-    }
-
-    public static Schema<byte[]> newAutoProduceSchema() {
-        return catchExceptions(
-                () -> (Schema<byte[]>) newClassInstance("org.apache.pulsar.client.impl.schema.AutoProduceBytesSchema")
-                        .newInstance());
-    }
-
-    public static <K, V> Schema<KeyValue<K, V>> newKeyValueSchema(Schema<K> keySchema, Schema<V> valueSchema) {
-        return catchExceptions(
-                () -> (Schema<KeyValue<K, V>>) getConstructor("org.apache.pulsar.client.impl.schema.KeyValueSchema",
-                        Schema.class, Schema.class).newInstance(keySchema, valueSchema));
-    }
-
-    public static <K, V> Schema<KeyValue<K, V>> newKeyValueSchema(Class<K> key, Class<V> value, SchemaType type) {
-        return catchExceptions(
-                () -> (Schema<KeyValue<K, V>>) getStaticMethod("org.apache.pulsar.client.impl.schema.KeyValueSchema",
-                        "of", Class.class, Class.class, SchemaType.class).invoke(null, key, value, type));
-    }
-
-    public static Schema<?> getSchema(SchemaInfo schemaInfo) {
-        return catchExceptions(
-                () -> (Schema<?>) getStaticMethod("org.apache.pulsar.client.impl.schema.AutoConsumeSchema",
-                        "getSchema", SchemaInfo.class).invoke(null, schemaInfo));
-    }
 }
