@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,11 +18,16 @@
  */
 package org.apache.pulsar.client.api.url;
 
+import java.lang.reflect.InvocationTargetException;
 import java.net.URLStreamHandler;
 import java.net.URLStreamHandlerFactory;
 import java.util.HashMap;
 import java.util.Map;
 
+/**
+ * This class defines a factory for {@code URL} stream
+ * protocol handlers.
+ */
 public class PulsarURLStreamHandlerFactory implements URLStreamHandlerFactory {
     private static final Map<String, Class<? extends URLStreamHandler>> handlers;
     static {
@@ -36,13 +41,12 @@ public class PulsarURLStreamHandlerFactory implements URLStreamHandlerFactory {
         try {
             Class<? extends URLStreamHandler> handler = handlers.get(protocol);
             if (handler != null) {
-                urlStreamHandler = handler.newInstance();
+                urlStreamHandler = handler.getDeclaredConstructor().newInstance();
             } else {
                 urlStreamHandler = null;
             }
-        } catch (InstantiationException e) {
-            urlStreamHandler = null;
-        } catch (IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException
+                | InvocationTargetException | NoSuchMethodException e) {
             urlStreamHandler = null;
         }
         return urlStreamHandler;
