@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,10 +18,16 @@
  */
 package org.apache.pulsar.common.stats;
 
+import static org.apache.pulsar.common.util.Runnables.catchingAndLoggingThrowables;
+import com.google.common.collect.Lists;
+import com.google.common.collect.Sets;
+import io.netty.buffer.PoolArenaMetric;
+import io.netty.buffer.PoolChunkListMetric;
+import io.netty.buffer.PoolChunkMetric;
+import io.netty.buffer.PooledByteBufAllocator;
 import java.lang.management.BufferPoolMXBean;
 import java.lang.management.ManagementFactory;
 import java.lang.management.RuntimeMXBean;
-import java.lang.reflect.Field;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -30,36 +36,22 @@ import java.util.Map.Entry;
 import java.util.Set;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicLong;
-
 import org.apache.commons.lang3.StringUtils;
+import org.apache.pulsar.common.util.DirectMemoryUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.google.common.collect.Lists;
-import com.google.common.collect.Sets;
-
-import io.netty.buffer.PoolArenaMetric;
-import io.netty.buffer.PoolChunkListMetric;
-import io.netty.buffer.PoolChunkMetric;
-import io.netty.buffer.PooledByteBufAllocator;
-import io.netty.util.internal.PlatformDependent;
-
+/**
+ * This class is responsible for providing JVM metrics.
+ */
 public class JvmMetrics {
 
     private static final Logger log = LoggerFactory.getLogger(JvmMetrics.class);
-    private static Field directMemoryUsage = null;
     private final JvmGCMetricsLogger gcLogger;
 
     private final String componentName;
-    private final static Map<String, Class<? extends JvmGCMetricsLogger>> gcLoggerMap = new HashMap<>();
+    private static final Map<String, Class<? extends JvmGCMetricsLogger>> gcLoggerMap = new HashMap<>();
     static {
-        try {
-            directMemoryUsage = PlatformDependent.class.getDeclaredField("DIRECT_MEMORY_COUNTER");
-            directMemoryUsage.setAccessible(true);
-        } catch (Exception e) {
-            log.warn("Failed to access netty DIRECT_MEMORY_COUNTER field {}", e.getMessage());
-        }
         // GC type and implementation mapping
         gcLoggerMap.put("-XX:+UseG1GC", JvmG1GCMetricsLogger.class);
     }
@@ -71,7 +63,8 @@ public class JvmMetrics {
         JvmGCMetricsLogger gcLoggerImpl = null;
         if (StringUtils.isNotBlank(gcLoggerImplClassName)) {
             try {
-                gcLoggerImpl = (JvmGCMetricsLogger) Class.forName(gcLoggerImplClassName).newInstance();
+                gcLoggerImpl = (JvmGCMetricsLogger) Class.forName(gcLoggerImplClassName)
+                        .getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 log.error("Failed to initialize jvmGCMetricsLogger {} due to {}", jvmGCMetricsLoggerClassName,
                         e.getMessage(), e);
@@ -95,7 +88,7 @@ public class JvmMetrics {
     public JvmMetrics(ScheduledExecutorService executor, String componentName, JvmGCMetricsLogger gcLogger) {
         this.gcLogger = gcLogger;
         if (executor != null) {
-            executor.scheduleAtFixedRate(gcLogger::refresh, 0, 1, TimeUnit.MINUTES);
+            executor.scheduleAtFixedRate(catchingAndLoggingThrowables(gcLogger::refresh), 0, 1, TimeUnit.MINUTES);
         }
         this.componentName = componentName;
     }
@@ -111,15 +104,16 @@ public class JvmMetrics {
         m.put("jvm_total_memory", r.totalMemory());
 
         m.put("jvm_direct_memory_used", getJvmDirectMemoryUsed());
-        m.put("jvm_max_direct_memory", PlatformDependent.maxDirectMemory());
+        m.put("jvm_max_direct_memory", DirectMemoryUtils.jvmMaxDirectMemory());
         m.put("jvm_thread_cnt", getThreadCount());
-        
+
         this.gcLogger.logMetrics(m);
 
         long totalAllocated = 0;
         long totalUsed = 0;
 
-        for (PoolArenaMetric arena : PooledByteBufAllocator.DEFAULT.directArenas()) {
+        for (PoolArenaMetric arena : PooledByteBufAllocator.DEFAULT.metric().directArenas()) {
+            this.gcLogger.logMetrics(m);
             for (PoolChunkListMetric list : arena.chunkLists()) {
                 for (PoolChunkMetric chunk : list) {
                     int size = chunk.chunkSize();
@@ -134,18 +128,18 @@ public class JvmMetrics {
         m.put(this.componentName + "_default_pool_allocated", totalAllocated);
         m.put(this.componentName + "_default_pool_used", totalUsed);
 
+        this.gcLogger.logMetrics(m);
+
         return Lists.newArrayList(m);
     }
 
     public static long getJvmDirectMemoryUsed() {
-        if (directMemoryUsage != null) {
-            try {
-                return ((AtomicLong) directMemoryUsage.get(null)).get();
-            } catch (Exception e) {
-                if (log.isDebugEnabled()) {
-                    log.debug("Failed to get netty-direct-memory used count {}", e.getMessage());
-                }
-            }
+        long usedDirectMemory = io.netty.util.internal.PlatformDependent.usedDirectMemory();
+        if (usedDirectMemory != -1L) {
+            return usedDirectMemory;
+        }
+        if (log.isDebugEnabled()) {
+            log.debug("Failed to get netty-direct-memory used count.");
         }
 
         List<BufferPoolMXBean> pools = ManagementFactory.getPlatformMXBeans(BufferPoolMXBean.class);
